Arreglos de varios warnings